fixed button jumping up when selected

--- a/client/src/assets/css/global.css
+++ b/client/src/assets/css/global.css
@@ -63,5 +63,5 @@
 }
 
 .col-height {
-  height: 70px;
+  height: 50px;
 }
