--- a/client/src/features/dashboard/assets/css/dashboard.css
+++ b/client/src/features/dashboard/assets/css/dashboard.css
@@ -6,3 +6,7 @@
   display: flex;
   justify-content: space-between;
 }
+
+button[data-state="checked"], button[data-state="indeterminate"] {
+  transform: translateY(3px);
+}
